--- a/templates/anime_downloader/components/video_modal.html
+++ b/templates/anime_downloader/components/video_modal.html
@@ -16,7 +16,7 @@
                 </button>
             </div>
             <div class="modal-body" style="padding: 0;">
-                <div class="video-container" style="position: relative; overflow: hidden; background: #000;">
+                <div class="video-container">
                     <video id="video-player" class="video-js vjs-big-play-centered vjs-theme-fantasy m-auto" controls preload="auto" playsinline webkit-playsinline>
                         <p class="vjs-no-js">JavaScript가 필요합니다.</p>
                     </video>
