--- a/templates/anime_downloader_ohli24_request.html
+++ b/templates/anime_downloader_ohli24_request.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %} {% block content %}
 <link rel="stylesheet" href="{{ url_for('.static', filename='css/mobile_custom.css') }}"/>
 <link rel="stylesheet" href="{{ url_for('.static', filename='css/' ~ arg['sub'] ~ '.css') }}"/>
+<link rel="stylesheet" href="{{ url_for('.static', filename='css/video_modal.css') }}"/>
 
     <div id="preloader">
         <div class="demo">
@@ -59,6 +60,9 @@
         </form>
     </div>
     <!--전체-->
+    <!-- Video Modal Component -->
+    {% include 'anime_downloader/components/video_modal.html' %}
+    
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
     <script src="{{ url_for('.static', filename='js/sjva_ui14.js') }}"></script>
 
@@ -188,7 +192,7 @@
             
             // Standard Actions
             if (data.first_exist_filepath) {
-                str += `<button type="button" class="btn btn-success btn-sm mr-2" onclick="play_video('${data.first_exist_filepath.replace(/\\/g, '\\\\')}', '${data.first_exist_filename}')"><i class="fa fa-play"></i> 재생</button>`;
+                str += `<button type="button" class="btn btn-success btn-sm mr-2 btn-watch" data-path="${data.first_exist_filepath.replace(/\\/g, '\\\\')}"><i class="fa fa-play"></i> 보기</button>`;
             }
             str += `<button id="check_download_btn" class="btn btn-primary btn-sm"><i class="fa fa-download"></i> 선택 다운로드</button>`;
             str += `<button id="all_check_on_btn" class="btn btn-outline-light btn-sm">전체 선택</button>`;
