--- a/templates/anime_downloader_ohli24_search.html
+++ b/templates/anime_downloader_ohli24_search.html
@@ -36,7 +36,7 @@
 
             <div class="row align-items-center">
                 <div class="col-md-8 mx-auto">
-                     <div class="input-group input-group-lg">
+                     <div class="input-group input-group-responsive">
                         <input
                                 id="input_search"
                                 type="search"
@@ -119,7 +119,7 @@
 
         const wait3seconds = function () {
             // REFERENCE:  https://www.w3schools.com/jsref/met_win_settimeout.asp
-            const result = setTimeout(dismissLoadingScreen, 2000);
+            const result = setTimeout(dismissLoadingScreen, 1000);
         };
 
         window.addEventListener("load", wait3seconds);
