--- a/templates/anime_downloader_ohli24_request.html
+++ b/templates/anime_downloader_ohli24_request.html
@@ -396,7 +396,7 @@
                 dataType: "json",
                 success: function (data) {
                     // // console.log('#add_queue_btn::data >>', data)
-                    if (data.ret == 'enqueue_db_append' || data.ret == 'enqueue_db_exist') {
+                    if (data.ret == 'enqueue_db_append' || data.ret == 'enqueue_db_exist' || data.ret == 'enqueue_gdm_success') {
                         $.notify('<strong>다운로드 작업을 추가 하였습니다.</strong>', {type: 'success'});
                     } else if (data.ret == 'queue_exist') {
                         $.notify('<strong>이미 큐에 있습니다. 삭제 후 추가하세요.</strong>', {type: 'warning'});
